--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ authors = ["Adam Schwalm <adamschwalm@gmail.com>"]
 repository = "https://github.com/ALSchwalm/mythril"
 edition = "2018"
 license-file = "LICENSE"
-description = "A intel-focused hypervisor using VT-x/EPT"
+description = "An x86/ARM hypervisor"
 build = "build.rs"
 
-[dependencies]
+[target.'cfg(target_arch = "x86")'.dependencies]
 derive-try-from-primitive = "0.1.0"
 uefi = "0.3.2"
 uefi-services = "0.1.0"
